--- a/back-end/hospital-api/src/main/resources/templates/outpatient-chaco.html
+++ b/back-end/hospital-api/src/main/resources/templates/outpatient-chaco.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<div th:replace="fragments/general.html :: header(title='Nueva consulta', subtitle='Ambulatoria')"></div>
+	<div th:replace="fragments/general.html :: clinicalSpecialty(message='Especialidad clínica')"></div>
 	<div th:replace="fragments/general.html :: personalData(patientType='Paciente')"></div>
 	<div th:replace="fragments/general.html :: reasons(message='Motivos')"></div>
 	<div th:replace="fragments/general.html :: procedures(message='Procedimientos')"></div>
