tg-2073 [FE] Mostrar foto del paciente cuando se muestran sus datos

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/patient-profile/patient-profile.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/patient-profile/patient-profile.component.html
@@ -6,7 +6,7 @@
 			</button>
 		</div>
 		<div>
-			<app-patient-card [patient]="patientBasicData">
+			<app-patient-card *ngIf="personPhoto" [patient]="patientBasicData" [personPhoto]="personPhoto">
 				<div header class="header">
 					<app-patient-type-logo [patientTypeData]="patientTypeData"></app-patient-type-logo>
 				</div>
