--- a/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/routes/evaluacion-clinica-diagnosticos/evaluacion-clinica-diagnosticos.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/routes/evaluacion-clinica-diagnosticos/evaluacion-clinica-diagnosticos.component.html
@@ -1,6 +1,6 @@
 <app-content class="full">
 	<div fxLayout="row" fxLayoutGap="50px" fxLayout.xs="column">
-		<app-patient-card [patient]="patient$ | async" fxFlexOrder="2" fxFlexOrder.xs="1">
+		<app-patient-card *ngIf="personPhoto" [patient]="patient$ | async" [personPhoto]="personPhoto" fxFlexOrder="2" fxFlexOrder.xs="1">
 			<app-internment-episode-summary [internmentEpisode]="internmentEpisodeSummary$ | async" content>
 			</app-internment-episode-summary>
 		</app-patient-card>
