--- a/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/routes/new-internment/new-internment.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/routes/new-internment/new-internment.component.html
@@ -144,7 +144,7 @@
 
 		<section>
 			<div class="profile-card">
-				<app-patient-card [patient]="patientBasicData">
+				<app-patient-card *ngIf="personPhoto" [patient]="patientBasicData" [personPhoto]="personPhoto">
 					<div header class="header">
 						<app-patient-type-logo [patientTypeData]="patientTypeData"></app-patient-type-logo>
 					</div>
