--- a/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/routes/nota-evolucion/nota-evolucion.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/routes/nota-evolucion/nota-evolucion.component.html
@@ -2,7 +2,7 @@
 	<div class="container-row">
 		<app-nota-evolucion-form></app-nota-evolucion-form>
 		<section>
-			<app-patient-card [patient]="patient$ | async">
+			<app-patient-card *ngIf="personPhoto" [patient]="patient$ | async" [personPhoto]="personPhoto">
 				<app-internment-episode-summary [internmentEpisode]="internmentEpisodeSummary$ | async" content></app-internment-episode-summary>
 			</app-patient-card>
 		</section>
