tg-2105 [FE] agregar informacion en card de profile de paciente

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/patient-profile/patient-profile.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/patient-profile/patient-profile.component.html
@@ -11,7 +11,9 @@
 					<app-patient-type-logo [patientTypeData]="patientTypeData"></app-patient-type-logo>
 				</div>
 				<div content>
-					<app-personal-information [personalInformation]="personalInformation"></app-personal-information>
+					<app-personal-information [personalInformation]="personalInformation"
+					                          [patientMedicalCoverage]="patientMedicalCoverage">
+					</app-personal-information>
 				</div>
 			</app-patient-card>
 		</div>
