--- a/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/routes/patient-discharge/patient-discharge.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/routes/patient-discharge/patient-discharge.component.html
@@ -49,7 +49,9 @@
 					</div>
 					<div content>
 						<app-personal-information
-							[personalInformation]="personalInformation"></app-personal-information>
+							[personalInformation]="personalInformation"
+							[patientMedicalCoverage]="patientMedicalCoverage">
+						</app-personal-information>
 					</div>
 				</app-patient-card>
 			</div>
