--- a/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/components/medical-discharge/medical-discharge.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/components/medical-discharge/medical-discharge.component.html
@@ -48,8 +48,9 @@
 						<app-patient-type-logo [patientTypeData]="patientTypeData"></app-patient-type-logo>
 					</div>
 					<div content>
-						<app-personal-information
-							[personalInformation]="personalInformation"></app-personal-information>
+						<app-personal-information [personalInformation]="personalInformation"
+						                          [patientMedicalCoverage]="patientMedicalCoverage">
+						</app-personal-information>
 					</div>
 				</app-patient-card>
 			</div>
