--- a/front-end/webapp/src/app/modules/pacientes/routes/profile/profile.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/routes/profile/profile.component.html
@@ -20,7 +20,9 @@
 					</ng-container>
 				</div>
 				<div content>
-					<app-personal-information [personalInformation]="personalInformation"></app-personal-information>
+					<app-personal-information [personalInformation]="personalInformation"
+					                          [patientMedicalCoverage]="patientMedicalCoverage">
+					</app-personal-information>
 				</div>
 			</app-patient-card>
 		</div>
