tg-2122 FE - informacion de cobertura medica asociada a turnos

--- a/front-end/webapp/src/app/modules/turnos/dialogs/new-appointment/new-appointment.component.html
+++ b/front-end/webapp/src/app/modules/turnos/dialogs/new-appointment/new-appointment.component.html
@@ -84,7 +84,7 @@
 						<mat-form-field appearance="outline">
 							<mat-label>Cobertura Médica </mat-label>
 							<mat-select
-								formControlName="patientMedicalCoverageId">
+								formControlName="patientMedicalCoverage">
 								<mat-option
 									id="medicalCoverage"
 									name="medicalCoverage"
