tg-2083 [FE] Agrega flujo busqueda de paciente para tipo de documento 'no posee' el numero de doc no debe ser obligatorio

--- a/front-end/webapp/src/app/modules/pacientes/component/search-create/search-create.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/component/search-create/search-create.component.html
@@ -9,7 +9,7 @@
 			<div>
 				<mat-form-field appearance="outline">
 					<mat-label>Tipo</mat-label>
-					<mat-select formControlName="identifType">
+					<mat-select formControlName="identifType" (openedChange)="onIdentifTypeChange()">
 						<mat-option id="identifType" name="identifType" *ngFor="let type of identifyTypeArray"
 							[value]="type.id">
 							{{type.description}}
