--- a/front-end/webapp/src/app/modules/presentation/components/personal-information/personal-information.component.scss
+++ b/front-end/webapp/src/app/modules/presentation/components/personal-information/personal-information.component.scss
@@ -22,3 +22,15 @@ span {
 	color: #A8A8A8;
 }
 
+mat-expansion-panel-header {
+	div {
+		width: 100%;
+	}
+	.medical-coverage-acronym-name {
+		display: inline-block;
+		max-width: 50%;
+		overflow: hidden !important;
+		white-space: nowrap;
+		text-overflow: ellipsis;
+	}
+}
