--- a/front-end/webapp/src/app/modules/pacientes/component/view-patient-detail/view-patient-detail.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/component/view-patient-detail/view-patient-detail.component.html
@@ -4,7 +4,7 @@
 		<h2 class="page-title" [translate]="'Se descartará la búsqueda y se abriran los datos de empadronamiento de:'"></h2>
 	</section>
 	<div class="sticky">
-		<app-patient-card [patient]="patient">
+		<app-patient-card *ngIf="personPhoto" [patient]="patient" [personPhoto]="personPhoto">
 			<div content align="center">
 				<mat-card-subtitle>
 					<p>
