--- a/front-end/webapp/src/app/modules/core/dialogs/medical-coverage/medical-coverage.component.scss
+++ b/front-end/webapp/src/app/modules/core/dialogs/medical-coverage/medical-coverage.component.scss
@@ -1,4 +1,5 @@
 @import '../../../../../assets/styles/mixins.scss';
+@import'../../../../../assets/styles/mat-mixins.scss';
 
 .align-items{
 	align-items: none !important;
