--- a/front-end/webapp/src/assets/styles/mat-mixins.scss
+++ b/front-end/webapp/src/assets/styles/mat-mixins.scss
@@ -274,3 +274,11 @@ $default-color: 50;
 		background-color: #ffffff;
 	}
 }
+
+@mixin mat-theme-color($theme) {
+
+	.primary{
+		$primary-palette: map-get($theme, primary);
+		color: mat-color($primary-palette);
+	}
+}
