--- a/front-end/webapp/src/assets/styles/theme.scss
+++ b/front-end/webapp/src/assets/styles/theme.scss
@@ -21,3 +21,4 @@ $theme: mat-light-theme($primary, $accent);
 @include no-data($theme);
 @include general($theme);
 @include header($theme);
+@include mat-theme-color($theme)
