tg-2137 mejora directorio de componentes select-agenda y agenda en turnos module

--- a/front-end/webapp/src/app/modules/turnos/components/select-agenda/select-agenda.component.scss
+++ b/front-end/webapp/src/app/modules/turnos/components/select-agenda/select-agenda.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../../../assets/styles/mat-mixins';
+@import '../../../../../assets/styles/mat-mixins';
 
 @include mat-form-field-background-white;
 
