--- a/front-end/webapp/src/app/modules/turnos/routes/agenda/agenda.component.scss
+++ b/front-end/webapp/src/app/modules/turnos/routes/agenda/agenda.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../../../../../assets/styles/mixins';
+@import '../../../../../assets/styles/mixins';
 
 $green-month-cell: #009B68;
 $blue-month-cell: #2687C5;
