--- a/front-end/webapp/src/app/modules/turnos/components/select-agenda/select-agenda.component.html
+++ b/front-end/webapp/src/app/modules/turnos/components/select-agenda/select-agenda.component.html
@@ -38,7 +38,7 @@
 	<section id="no-agenda" *ngIf="agendas?.length === 0" class="no-agenda">
 		<mat-card>
 			<mat-card-header>
-				<mat-card-title *ngIf="!idEspecialidad else noAgendaForProfessionalAndSpecialty" [translate]="'turnos.home.NO_AGENDA_MSG_TITLE'"></mat-card-title>
+				<mat-card-title *ngIf="!filters?.idEspecialidad else noAgendaForProfessionalAndSpecialty" [translate]="'turnos.home.NO_AGENDA_MSG_TITLE'"></mat-card-title>
 				<mat-card-subtitle [translate]="'turnos.home.NO_AGENDA_MSG_SUBTITLE'"></mat-card-subtitle>
 			</mat-card-header>
 			<mat-card-content>
