tg-2175 botón confirmar vacuna se ve siempre

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/aplicar-vacuna/aplicar-vacuna.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/aplicar-vacuna/aplicar-vacuna.component.html
@@ -99,7 +99,7 @@
 				{{'Aplicar vacuna' | translate | uppercase}}
 			</button>
 
-			<button type="submit" *ngIf="!snomedConcept" mat-raised-button color="primary">
+			<button type="submit" *ngIf="this.appliedVaccines.length >= 1 && !snomedConcept" mat-raised-button color="primary">
 				{{'Confirmar vacunaciones' | translate | uppercase}}
 			</button>
 		</mat-dialog-actions>
