tg-2174[P1] Botón de confirmar vacunas no queda visible con resultados de 5+ vacunas

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/aplicar-vacuna/aplicar-vacuna.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/aplicar-vacuna/aplicar-vacuna.component.html
@@ -1,30 +1,30 @@
-<div mat-dialog-title>
+<div mat-dialog-title >
 	<div class="mat-h2" [translate]="'ambulatoria.paciente.vacunas.aplicar.TITLE'"></div>
 </div>
 
+<div mat-dialog-content>
 
-<div fxLayout="row">
-	<div class="mat-h4" [translate]="'Especialidad'"></div>
-</div>
-<div fxLayout="row" [formGroup]="form">
-	<mat-form-field appearance="outline">
-		<mat-select id="clinicalSpecialtyId"
-					name="clinicalSpecialty"
-					formControlName="clinicalSpecialty"
-					(selectionChange)="setDefaultSpecialty()"
-					[attr.disabled]="fixedSpecialty">
-			<mat-option *ngFor="let clinicalSpecialty of this.specialties" [value]="clinicalSpecialty">
-				<span class="mat-body">{{clinicalSpecialty.name}}</span>
-			</mat-option>
-		</mat-select>
-		<mat-error [translate]="'forms.REQUIRED'"></mat-error>
-	</mat-form-field>
-</div>
+	<div fxLayout="row">
+		<div class="mat-h4" [translate]="'Especialidad'"></div>
+	</div>
+	<div fxLayout="row" [formGroup]="form">
+		<mat-form-field appearance="outline">
+			<mat-select id="clinicalSpecialtyId"
+						name="clinicalSpecialty"
+						formControlName="clinicalSpecialty"
+						(selectionChange)="setDefaultSpecialty()"
+						[attr.disabled]="fixedSpecialty">
+				<mat-option *ngFor="let clinicalSpecialty of this.specialties" [value]="clinicalSpecialty">
+					<span class="mat-body">{{clinicalSpecialty.name}}</span>
+				</mat-option>
+			</mat-select>
+			<mat-error [translate]="'forms.REQUIRED'"></mat-error>
+		</mat-form-field>
+	</div>
 
 <div class="spinner" *ngIf="loading else addInmunization">
 	<mat-spinner color="primary"></mat-spinner>
 </div>
-
 
 <ng-template #addInmunization>
 
@@ -40,12 +40,12 @@
 				<mat-spinner diameter="70" color="primary" *ngIf="searching"></mat-spinner>
 			</div>
 
-			<app-table *ngIf="!searching && !snomedConcept" [model]="conceptsResultsTable"
-			           [mainStyle]="'secondary'"></app-table>
+			<app-table *ngIf="!searching && !snomedConcept" [model]="conceptsResultsTable"></app-table>
 
 			<ng-template #vacunasForm>
 				<div>
 					<div fxLayout="row" fxLayout.lt-lg="column" fxLayoutGap="2%">
+
 						<mat-form-field appearance="outline">
 							<mat-label [translate]="'ambulatoria.paciente.vacunas.aplicar.INMUNIZATION'">
 							</mat-label>
@@ -82,15 +82,12 @@
 			</ng-template>
 		</div>
 
-
-		<div *ngIf="tableModel?.data?.length > 0" fxLayout="row" fxLayoutGap="20px">
-			<div >
-				<app-summary-card [header]="vacunasSummary"
-								  [tooltip]="'historia-clinica.summary-card.vacunas.TOOLTIP'">
-					<app-table [model]="tableModel" ></app-table>
-				</app-summary-card>
+			<div *ngIf="tableModel?.data?.length > 0" fxLayout="row" fxLayoutGap="20px">
+					<app-summary-card [header]="vacunasSummary" style="width: 100%"
+									  [tooltip]="'historia-clinica.summary-card.vacunas.TOOLTIP'">
+						<app-table [model]="tableModel" ></app-table>
+					</app-summary-card>
 			</div>
-		</div>
 
 		<mat-dialog-actions align="end">
 			<button mat-stroked-button color="primary" mat-dialog-close> {{ 'buttons.CANCEL' | translate | uppercase }}
@@ -98,13 +95,14 @@
 			<button (click)="applyVaccine()" *ngIf="snomedConcept" mat-raised-button color="primary">
 				{{'ambulatoria.paciente.vacunas.aplicar.TITLE' | translate | uppercase}}
 			</button>
-
 			<button type="submit" *ngIf="this.appliedVaccines.length >= 1 && !snomedConcept" mat-raised-button color="primary">
 				{{'ambulatoria.paciente.vacunas.aplicar.SUBMIT_CONJUNTO_VACUNAS' | translate | uppercase}}
 			</button>
 		</mat-dialog-actions>
+
 	</form>
 
 
 </ng-template>
 
+</div>
